[BUG] Fix slot discounts
